@@ -9,7 +9,7 @@
 #
 package Config::Model::Tk::CheckListEditor ;
 {
-  $Config::Model::Tk::CheckListEditor::VERSION = '1.335';
+  $Config::Model::Tk::CheckListEditor::VERSION = '1.336';
 }
 
 use strict;
